test/expected/explain_fac3_v-c++.out
explain void f(int x[const 3])
                    ^
21: error: "const" arrays are not supported in C++
